--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@microsoft/sp-property-pane": "1.21.1",
     "@microsoft/sp-webpart-base": "1.21.1",
     "@uifabric/react-hooks": "^7.16.4",
-    "botframework-webchat": "^4.18.0",
+    "botframework-webchat": "4.15.9",
     "office-ui-fabric-react": "^7.204.1",
+    "p-defer-es5": "^2.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "redux": "^5.0.1",
