--- a/src/webparts/helloWorld/HelloWorldWebPart.manifest.json
+++ b/src/webparts/helloWorld/HelloWorldWebPart.manifest.json
@@ -28,13 +28,15 @@
       "officeFabricIconFontName": "Page",
       "properties": {
         "description": "HelloWorld",
-        "botUrl": "https://6a0383e2ebc3ee40bdc9d05198285a.12.environment.api.powerplatform.com/powervirtualagents/botsbyschema/crfb3_selfServiceAgent/directline/token?api-version=2022-03-01-preview",
+        "botURL": "https://6a0383e2ebc3ee40bdc9d05198285a.12.environment.api.powerplatform.com/powervirtualagents/botsbyschema/crfb3_selfServiceAgent/directline/token?api-version=2022-03-01-preview",
         "buttonLabel": "Chat Now",
         "customScope": "api://27eb69cb-53e6-40db-8533-dfa804dca4ac/Sites.Read",
-        "clientId": "4ffd1a7a-9a30-48a9-bc3d-51060e46591b",
+        "clientID": "4ffd1a7a-9a30-48a9-bc3d-51060e46591b",
         "authority": "https://login.microsoftonline.com/s63fb.onmicrosoft.com",
         "botName": "Copilot Self Service Agent",
-        "greet": true
+        "greet": true,
+        "botAvatarImage": "",
+        "botAvatarInitials": "CB"
       }
     }
   ]
